css for account-summary

--- a/config/database.yml
+++ b/config/database.yml
@@ -7,6 +7,11 @@
 default: &default
   adapter: postgresql
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  
+  #username: "akityty"
+  
+  #password: "12345678"
+
   timeout: 5000
 
 development:
